--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,4 +1,11 @@
 [server]
 headless = true
-address = "0.0.0.0"
+address = "127.0.0.1"
 port = 5000
+
+[theme]
+primaryColor = "#4ecdc4"
+backgroundColor = "#ffffff"
+secondaryBackgroundColor = "#f8f9fa"
+textColor = "#333333"
+font = "sans serif"
